--- a/assets/bootstrap.specs-engine.less
+++ b/assets/bootstrap.specs-engine.less
@@ -89,6 +89,18 @@ body {
 		}
 	}
 	
+	.dropdown-menu {
+		li a {
+			padding: 8px 10px;
+		}
+		
+		.badge {
+			float: right;
+			padding-top: 3px;
+			margin-left: 5px;
+		}
+	}
+	
 }
 
 
