--- a/assets/bootstrap.specs-engine.less
+++ b/assets/bootstrap.specs-engine.less
@@ -144,6 +144,31 @@ p { font-size: 16px; }
 	background-position: left top;
 }
 
+#overview {	
+	.overview-category {
+		background: #00AEDB;
+		.border-radius(5px);
+		margin-bottom: 10px;
+		cursor: pointer;
+		
+		.header {
+			color: #eee;
+/* 			.border-radius(5px 5px 0 0); */
+			padding: 10px 10px 0;
+		}
+		
+		.baselayer, .baselayer div { 
+			background-size: 100%;	
+		}
+		
+		.baselayer { 
+			float: left; 
+			border: 1px solid ddd;
+			margin: 10px;
+		}
+	}
+}
+
 // .shadow: not in use right now..
 .shadow { .box-shadow(0 10px 10px rgba(0,0,0,.25)); } /* For popovers, glimpses, modals, etc */
 
