--- a/assets/bootstrap.specs-engine.css
+++ b/assets/bootstrap.specs-engine.css
@@ -4837,29 +4837,10 @@ a {
   background-color: #bf2e12;
   color: #f2f0e3;
 }
-#readfile,
-.category {
+#readfile {
   display: none;
 }
 /* Mockup Stuff */
-.mockup {
-  margin-top: 20px;
-}
-.mockupinfo {
-  width: 330px;
-  float: left;
-}
-.baselayer {
-  margin-left: 350px;
-}
-.baselayer,
-.baselayer div {
-  /* For the base image as well as elements above it */
-
-  position: relative;
-  background-repeat: no-repeat;
-  background-position: left top;
-}
 #overview .overview-category {
   background: #00AEDB;
   -webkit-border-radius: 5px;
@@ -4894,8 +4875,28 @@ a {
   border: 1px solid ddd;
   margin: 10px;
 }
+#main .category {
+  display: none;
+  margin-bottom: 20px;
+}
+#main .mockup {
+  margin-top: 20px;
+}
+#main .mockupinfo {
+  width: 330px;
+  float: left;
+}
 #main .baselayer {
   border: 5px solid #999999;
+  margin-left: 350px;
+}
+#main .baselayer,
+#main .baselayer div {
+  /* For the base image as well as elements above it */
+
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: left top;
 }
 .shadow {
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
