--- a/assets/bootstrap.specs-engine.css
+++ b/assets/bootstrap.specs-engine.css
@@ -4799,17 +4799,15 @@ a {
 .navbar #cat-dropdown .dropdown-menu li > a .title {
   padding-right: 80px;
 }
-.navbar #cat-dropdown .dropdown-menu li > a .icon-white {
-  display: none;
+.navbar #cat-dropdown .dropdown-menu li > a .pull-right {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
 .navbar #cat-dropdown .dropdown-menu li > a:hover {
   background: #bf2e12;
 }
-.navbar #cat-dropdown .dropdown-menu li > a:hover .icon-black {
-  display: none;
-}
-.navbar #cat-dropdown .dropdown-menu li > a:hover .icon-white {
-  display: inline-block;
+.navbar #cat-dropdown .dropdown-menu li > a:hover i {
+  background-image: url(../img/glyphicons-halflings-white.png);
 }
 .navbar .navbar-inner {
   background: #f2f0e3;
@@ -4841,6 +4839,14 @@ a {
   display: none;
 }
 /* Mockup Stuff */
+.baselayer,
+.baselayer div {
+  /* For the base image as well as elements above it */
+
+  position: relative;
+  background-repeat: no-repeat;
+  background-position: left top;
+}
 #overview .overview-category {
   background: #00AEDB;
   -webkit-border-radius: 5px;
@@ -4889,14 +4895,6 @@ a {
 #main .baselayer {
   border: 5px solid #999999;
   margin-left: 350px;
-}
-#main .baselayer,
-#main .baselayer div {
-  /* For the base image as well as elements above it */
-
-  position: relative;
-  background-repeat: no-repeat;
-  background-position: left top;
 }
 .shadow {
   -webkit-box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
