--- a/assets/bootstrap.specs-engine.less
+++ b/assets/bootstrap.specs-engine.less
@@ -135,6 +135,7 @@ a { color: @metro_red; }
 			&:hover { text-decoration: none; }
 			
 			.caret {
+				margin-top: 5px;
 				border-top-color: @metro_red;
 				border-bottom-color: @metro_red;
 			}
