--- a/assets/bootstrap.specs-engine.less
+++ b/assets/bootstrap.specs-engine.less
@@ -223,6 +223,7 @@ a { color: @metro_red; }
 		background: #00AEDB;
 		.border-radius(5px);
 		margin: 10px 0;
+		padding: 10px;
 		cursor: pointer;
 		.opacity(70);
 		.transition(opacity 0.2s ease-in-out);
@@ -231,7 +232,7 @@ a { color: @metro_red; }
 		
 		.header {
 			color: #eee;
-			padding: 10px 10px 0;
+			padding: 0 9px;
 			
 			h4 { margin: 0 0 5px; }
 		}
@@ -243,7 +244,7 @@ a { color: @metro_red; }
 		.baselayer { 
 			float: left; 
 			border: 1px solid ddd;
-			margin: 10px;
+			margin: 9px;
 		}
 		
 	}
